--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ csv = "1.1"
 serde = { version = "1.0", features = ["derive"] }
 plotly = "0.8"
 serde_json = "1.0"
+
+handlebars = "4"  
+actix-web = "4"  
